--- a/index.css
+++ b/index.css
@@ -1,65 +1,80 @@
 /* Cambiar el estilo de letra */
 body {
     font-family: "Arial", sans-serif;
+    display: inline; /* o display: block; */
+    margin: 8px;
+    justify-content: center;
+    
+   align-items: center;
   }
   h1 {
     font-family: "Helvetica", sans-serif;
+    text-align: center;
+
+    
   }
 
+  .container {
+  
  
-  form {
-    display: flex;
-    flex-direction: column;
-    background:#f0f0f0 ;
-    text-align:center;
-    padding: 20px 25px;
-    box-shadow: 0 5px 10px; 
-  }
-  form .title{
-    color: black;
-    font-size: 35px
-    margin-bottom medium 30px;
-
-
-  }
-  form label {
-    margin-bottom: 35px;
-  }
-  form label .fa-solid{
-    font-size: 20px;
-    color: #007bff;
-    margin-right: 10px;
-
-  }
-  form label input {
-    outline: none;
-    border: none;
-    color: #000;
-    border-bottom: solid 1px #007bff;
-    padding: 0 5px;
-    font-size: 18px;
-  }
-  form label input::placeholder{
-    color: #000( 37,37,37,0.5);
-
-  }
-  form .link{
-    color: #000;
-    margin-bottom: 15px;
-
-  }
-  form button {
-    color: #f0f0f0;
-    border: none;
-    background: linear-gradient(to right, #007bff);
-    font-size: 20px;
-
-  }
+    text-align: center;
+      
+     
+    padding: 20px;
+      
+     
+    border: 1px solid #ccc;
+      
+     
+    border-radius: 5px;
+      
+     
+    background-color: #fff;
+    }
+    
+    .container h2 {
+      
+     
+    margin-top: 0;
+    }
+    
+    .container input {
+      width: 12%;
+      padding: 5px;
+      margin: 5px 0;
+    }
+    
+    .container button {
+      
+     
+    background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      
+     
+    border-radius: 5px;
+      
+     
+    cursor: pointer;
+    }
+    
+    
+    
+    
+    
+    #message {
+      
+     
+    color: red;
+    }
+  
+ 
   nav {
     background-color: #f0f0f0;  /*  para Cambiar la barra de navegacion   */
   }
 
   /* Agregar imágenes con margen */
 img {
-    margin: 10px;
+    margin: 8px;
   }
