--- a/index.css
+++ b/index.css
@@ -166,10 +166,10 @@ body{
     }
 }
 
-/* Cambiar el estilo de letra */
+
 body {
     font-family: "Arial", sans-serif;
-    display: inline; /* o display: block; */
+    display: inline;
     margin: 8px;
     justify-content: center;
     
@@ -246,3 +246,58 @@ body {
 img {
     margin: 8px;
   }
+
+  
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+ 
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+ 
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .container button {
+        
+       
+      background-color: #4CAF50;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        
+       
+      border-radius: 5px;
+        
+       
+      cursor: pointer;
+      }
