--- a/index.css
+++ b/index.css
@@ -1,217 +1,382 @@
 /* Menu */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 
-.barra {
-  font-family: Arial, Helvetica, sans-serif;
-
-  width: 10%;
-  height: 9%;
-  position: fixed;
-  transition: .4s all;
-
-  z-index: 1;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.barra ul {
-  padding: 0px;
-  text-align: center;
-
-}
-
-.barra li {
-  transition: .3s all;
-}
-
-.barra a {
-  text-decoration: none;
-  list-style: none;
-
-  transition: .3s all;
-  font-size: 0px;
-  padding: 0px;
-}
-
-.barra h2 {
-  text-align: center;
-  color: white;
-  padding: 7px;
-  padding-bottom: 7px;
-
-  font-size: 0px;
-}
-
-.barra img {
-  padding-top: 30px;
-  padding-left: 10px;
-}
-
-.barra:hover {
-  width: 20%;
-  height: 100%;
-  background-color: rgba(5, 33, 51, 0.98);
-}
-
-.barra:hover h2 {
-  padding: 15px;
-  font-size: 35px;
-}
-
-.barra:hover a {
-  font-size: 20px;
-  color: white;
-
-  display: block;
-  padding: 20px;
-}
-
-.barra:hover img {
-  height: 0px;
-}
-
-.barra:hover li {
-  border-top: 1px solid black;
-  width: 100%;
-}
-
-.barra:hover ul:last-of-type {
-  border-bottom: 1px solid black;
-}
-
-.barra:hover a:hover {
-  font-size: 25px;
-  padding: 30px 0px;
-  /*30 0 30 0*/
-  background-color: rgba(22, 78, 112, 0.98);
-}
-
-li ul {
-  display: none;
-  position: absolute;
-  top: 200px;
-  left: 380px;
-  background-color: rgba(22, 78, 112, 0.98);
-  font-size: 25px;
-}
-
-li:hover ul {
-  display: block;
-}
-
-/* Cambiar el estilo de letra */
 body {
-  font-family: "Arial", sans-serif;
-  display: inline;
-  /* o display: block; */
-  margin: 8px;
-  justify-content: center;
-  align-items: center;
+    font-family: 'Poppins', sans-serif;
+}
+
+.menu {
+    background-color: #1d5d84;
+    color: #fff;
+    height: 70px;
+}
+
+.menu__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.menu__links {
+    height: 100%;
+    transition: transform .5s;
+    display: flex;
+}
+
+.menu__item {
+    list-style: none;
+    position: relative;
+    height: 100%;
+    --clip: polygon(0 0, 100% 0, 100% 0, 0 0);
+    --transform: rotate(-90deg);
+}
+
+.menu__item:hover {
+    --clip: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    --transform: rotate(0);
+}
+
+.menu__link {
+    color: #fff;
+    text-decoration: none;
+    padding: 0 30px;
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
+.menu__link:hover {
+    background-color: #5e7094;
+}
+
+
+.menu__arrow {
+    transform: var(--transform);
+    transition: transform .3s;
+    display: block;
+    margin-left: 3px;
+}
+
+.menu__nesting {
+    list-style: none;
+    transition: clip-path .3s;
+    clip-path: var(--clip);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: max-content;
+    transform: translateY(100%);
+    background-color: #000;
+    z-index: 9999 !important;
+}
+
+.menu__link--inside {
+    padding: 30px 100px 30px 20px;
+}
+
+.menu__link--inside:hover {
+    background-color: #798499;
+}
+
+.menu__hamburguer {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    cursor: pointer;
+    display: none;
+}
+
+.menu__img {
+    display: block;
+    width: 36px;
+}
+
+@media (max-width:800px) {
+    .menu__hamburguer {
+        display: flex;
+    }
+
+    .menu__item {
+        --clip: 0;
+        overflow: hidden;
+    }
+
+    .menu__item--active {
+        --transform: rotate(0);
+        --background: #5e7094;
+    }
+
+    .menu__item--show {
+        background-color: var(--background);
+    }
+
+
+    .menu__links {
+        position: fixed;
+        max-width: 400px;
+        width: 100%;
+        top: 70px;
+        bottom: 0;
+        right: 0;
+        background-color: #000;
+        overflow-y: auto;
+        display: grid;
+        grid-auto-rows: max-content;
+        transform: translateX(100%);
+    }
+
+    .menu__links--show {
+        transform: unset;
+        width: 100%;
+    }
+
+    .menu__link {
+        padding: 25px 0;
+        padding-left: 30px;
+        height: auto;
+    }
+
+    .menu__arrow {
+        margin-left: auto;
+        margin-right: 20px;
+    }
+
+    .menu__nesting {
+        display: grid;
+        position: unset;
+        width: 100%;
+        transform: translateY(0);
+        height: 0;
+        transition: height .3s;
+    }
+
+    .menu__link--inside {
+        width: 90%;
+        margin-left: auto;
+        border-left: 1px solid #798499;
+    }
+}
+
+
+body {
+    font-family: "Arial", sans-serif;
+    display: inline;
+    margin: 8px;
+    justify-content: center;
+
+    align-items: center;
 }
 
 h1 {
-  font-family: "Helvetica", sans-serif;
-  text-align: center;
-  
+    font-family: "Helvetica", sans-serif;
+    text-align: center;
+
+
 }
 
 .container {
-  text-align: center;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #fff;
+
+
+    text-align: center;
+
+
+    padding: 20px;
+
+
+    border: 1px solid #ccc;
+
+
+    border-radius: 5px;
+
+
+    background-color: #fff;
 }
 
 .container h2 {
-  margin-top: 0;
+
+
+    margin-top: 0;
 }
 
 .container input {
-  width: 12%;
-  padding: 5px;
-  margin: 5px 0;
+    width: 12%;
+    padding: 5px;
+    margin: 5px 0;
 }
 
 .container button {
-  background-color: #4CAF50;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
+
+
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+
+
+    border-radius: 5px;
+
+
+    cursor: pointer;
 }
+
+
+
+
 
 #message {
-  color: red;
+
+
+    color: red;
 }
 
+
 nav {
-  background-color: #f0f0f0;
-  /*  para Cambiar la barra de navegacion   */
+    background-color: #f0f0f0;
+    /*  para Cambiar la barra de navegacion   */
 }
 
 /* Agregar imágenes con margen */
 img {
-  margin: 8px;
+    margin: 8px;
+}
+
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.container button {
+
+
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+
+
+    border-radius: 5px;
+
+
+    cursor: pointer;
 }
 
 .banner {
-  margin-bottom: 5px;
-  display: flex;
-  flex-direction: column;
-}
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+  }
 
-.header-content {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  min-height: 50px;
-}
+  .header-content {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 50px;
+  }
+  
+  .color-container {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center !important;
+    margin: 0 auto;
+    background-color: #00607ee3;
+  }
 
-.color-container {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center !important;
-  margin: 0 auto;
-  background-color: #00607ee3;
-}
+  .secundario {
+    background-color: #075155e3;
+    display: flex;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    white-space: unset;
+    flex-wrap: wrap;
+  }
+  
+  .contenedor {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 20px;
+    background-color: #075155e3;
+  }
+  
+  .contTexto {
+    display: grid;
+  }
+  
+  .slider {
+    display: flex;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    white-space: unset;
+  }
+  
+  .btnAspecto {
+    transition: background-color .3s;
+    color: var(--home-linkbox-text-color);
+    padding: .5rem 1rem;
+    border: var(--home-linkbox-border);
+    background-color: var(--home-linkbox-bg);
+    border-radius: 10px;
+    cursor: pointer;
+    float: right;
+  }
+  
+  h3 {
+    color: white
+  }
 
-.secundario {
-  background-color: #7b56e0e3;
-  display: flex;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-  white-space: unset;
-  flex-wrap: wrap;
-}
+  h4 {
+    color: white
+  }
 
-.contenedor {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-auto-rows: minmax(100px, auto);
-  grid-gap: 20px;
-  background-color: #7b56e0e3;
-}
-
-.contTexto {
-  display: grid;
-}
-
-.slider {
-  display: flex;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-  white-space: unset;
-}
-
-.btnAspecto {
-  transition: background-color .3s;
-  color: var(--home-linkbox-text-color);
-  padding: .5rem 1rem;
-  border: var(--home-linkbox-border);
-  background-color: var(--home-linkbox-bg);
-  border-radius: 10px;
-  cursor: pointer;
-  float: right;
-}
+  p {
+    color: white
+  }
