--- a/index.css
+++ b/index.css
@@ -310,17 +310,17 @@ img {
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
-  }
+}
 
-  .header-content {
+.header-content {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
     min-height: 50px;
-  }
-  
-  .color-container {
+}
+
+.color-container {
     position: relative;
     width: 100%;
     display: flex;
@@ -328,37 +328,37 @@ img {
     justify-content: center !important;
     margin: 0 auto;
     background-color: #00607ee3;
-  }
+}
 
-  .secundario {
+.secundario {
     background-color: #075155e3;
     display: flex;
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     white-space: unset;
     flex-wrap: wrap;
-  }
-  
-  .contenedor {
+}
+
+.contenedor {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-rows: minmax(100px, auto);
     grid-gap: 20px;
     background-color: #075155e3;
-  }
-  
-  .contTexto {
+}
+
+.contTexto {
     display: grid;
-  }
-  
-  .slider {
+}
+
+.slider {
     display: flex;
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     white-space: unset;
-  }
-  
-  .btnAspecto {
+}
+
+.btnAspecto {
     transition: background-color .3s;
     color: var(--home-linkbox-text-color);
     padding: .5rem 1rem;
@@ -367,16 +367,29 @@ img {
     border-radius: 10px;
     cursor: pointer;
     float: right;
-  }
-  
-  h3 {
-    color: white
-  }
+}
 
-  h4 {
+h3 {
     color: white
-  }
+}
 
-  p {
+h4 {
     color: white
-  }
+}
+
+p {
+    color: white
+}
+
+.carrito_class {
+    background: url(imagenes/carro.png) no-repeat;
+    width: 35px !important;
+    transition: background-color .3s;
+    color: var(--home-linkbox-text-color);
+    padding: .5rem 1rem;
+    border: var(--home-linkbox-border);
+    background-color: var(--home-linkbox-bg);
+    border-radius: 10px;
+    cursor: pointer;
+    float: right;
+}
