--- a/index.css
+++ b/index.css
@@ -310,17 +310,17 @@ img {
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
-}
+  }
 
-.header-content {
+  .header-content {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
     min-height: 50px;
-}
-
-.color-container {
+  }
+  
+  .color-container {
     position: relative;
     width: 100%;
     display: flex;
@@ -328,37 +328,37 @@ img {
     justify-content: center !important;
     margin: 0 auto;
     background-color: #00607ee3;
-}
+  }
 
-.secundario {
+  .secundario {
     background-color: #075155e3;
     display: flex;
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     white-space: unset;
     flex-wrap: wrap;
-}
-
-.contenedor {
+  }
+  
+  .contenedor {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-rows: minmax(100px, auto);
     grid-gap: 20px;
     background-color: #075155e3;
-}
-
-.contTexto {
+  }
+  
+  .contTexto {
     display: grid;
-}
-
-.slider {
+  }
+  
+  .slider {
     display: flex;
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     white-space: unset;
-}
-
-.btnAspecto {
+  }
+  
+  .btnAspecto {
     transition: background-color .3s;
     color: var(--home-linkbox-text-color);
     padding: .5rem 1rem;
@@ -367,21 +367,21 @@ img {
     border-radius: 10px;
     cursor: pointer;
     float: right;
-}
-
-h3 {
+  }
+  
+  h3 {
     color: white
-}
+  }
 
-h4 {
+  h4 {
     color: white
-}
+  }
 
-p {
+  p {
     color: white
-}
+  }
 
-.carrito_class {
+  .carrito_class {
     background: url(imagenes/carro.png) no-repeat;
     width: 35px !important;
     transition: background-color .3s;
@@ -392,4 +392,46 @@ p {
     border-radius: 10px;
     cursor: pointer;
     float: right;
+}
+/* Css lista*/
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #1A202C;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+}
+
+
+
+.carrito {
+    background-color: #f4f4f4;
+    padding: 1rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100%;
+    overflow-y: auto;
+    border-left: 1px solid #ccc;
+}
+
+.lista-carrito {
+    list-style: none;
+    padding: 0;
+}
+
+.lista-carrito li {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+}
+
+#total {
+    font-weight: bold;
 }
